# snow

./: CMakeLists.txt
res/: config.snow  index.snow
res/objects/: player.snow
res/scenes/: game.snow
src/: Config.h  main.cpp
src/ecs/: Component.cpp  Component.h  Entity.cpp  Entity.h
src/infrastructure/: Renderer.cpp  Renderer.h  World.cpp  World.h
src/lua/: Lua.cpp  Lua.h
src/resources/: Preferences.cpp  Preferences.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
